Fixed navigation on mobile

--- a/components-new/Navigation/Navigation.module.css
+++ b/components-new/Navigation/Navigation.module.css
@@ -10,3 +10,7 @@
   color: var(--btg-navigation-link-color);
   text-decoration: underline;
 }
+
+.navigation__dropdown {
+  background-color: var(--btg-color-primary-700);
+}
